adapt tabulation to the latest table style + some fixes